fix text align on button

--- a/resources/css/my-list.css
+++ b/resources/css/my-list.css
@@ -57,6 +57,7 @@
 
 #list-item-text {
     width: 15rem;
+    text-align: left;
 }
 
 #openListInfoButton {
